third_party/rust/paste/tests/ui/env-suffix.stderr
error: expected string literal
 --> tests/ui/env-suffix.rs:4:15
  |
4 |     fn [<env!("VAR"suffix)>]() {}
  |               ^^^^^^^^^^^
