third_party/rust/paste/tests/ui/env-suffix.rs
use paste::paste;

paste! {
    fn [<env!("VAR"suffix)>]() {}
}

fn main() {}
